--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,13 +1,22 @@
-<!-- Just an image -->
-<nav class="navbar navbar-light bg-body-tertiary">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-        <img
-          src="https://2.bp.blogspot.com/-HCJNBhOZXAQ/UjrDiUQ95AI/AAAAAAAAAfg/E_Q8Q9tKh64/s1600/youtube-logo2.jpg"
-          height="50"
-          alt="Youtube download Video"
-          loading="lazy"
-        />
-      </a>
+<nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button
+      data-mdb-collapse-init
+      class="navbar-toggler"
+      type="button"
+      data-mdb-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <i class="fas fa-bars"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="/">Home</a>
+       
+      </div>
     </div>
-  </nav>
+  </div>
+</nav>
